# rust-jwt-auth-starter

./: Cargo.toml  plans.md
src/: main.rs
src/auth/: api.rs  auth_config.rs  jwt_claims.rs  mod.rs
src/error/: auth_error.rs  mod.rs  validationation_error.rs
src/mw/: mw_auth.rs
src/utility/: auth.rs
