[package]
name = "vi-test-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
validator = { version = "0.16.1", features = ["derive"] }
jsonwebtoken = "9.2.0"
tower = "0.4.13"
chrono = "0.4.31"
